--- a/d-vs-wh.tex
+++ b/d-vs-wh.tex
@@ -2,6 +2,9 @@
 
 \chapter{\tsc{d} vs. \tsc{wh}}\label{ch:relativization}
 
+Some intro about head of the relative clause and relative pronoun.
+
+
 % So, we have seen that relative pronouns are sensitive to the internal case and to the external case. In this chapter we go back to what this means for the `head' in headless relatives. In headless relatives this head is namely missing. Like I said in the introduction, there are several ways of interpreting that.
 
 % In this section I discuss the matter whether it is actually the relative pronoun or the head of the relative clause that surfaces in headless relatives. I argue that for Modern German it is always the relative pronoun in the relative clause that surfaces. This follows from the fact that Modern German has \tsc{wh}-pronouns as relative pronouns in its headless relatives. In Gothic and Old High German it is sometimes the relative pronoun and sometimes the (light) head of the relative clause that surfaces as relative pronoun. This is a consequence of the \tsc{d}-morphology of the relative pronoun in Old High German and Gothic.
@@ -19,11 +22,11 @@ In this section I discuss headless relatives in Modern German. Modern German onl
 
 Modern German differs crucially from Gothic and Old High German in that its headless relative are only grammatical when the internal case wins the case competition over the external case. In other words, the relative pronoun can only surface in the internal case, i.e. the case of the relative clause. This seems to indicate that the relative pronoun is part of the relative clause.
 
-Independent from these case facts, I provide three arguments why the headless relative pronoun in Modern German is part of the relative clause. The first one is extraposition in headless relatives, the second one is relative pronouns in general and the last one is \tsc{wh}-elements in general.
+Independent from these case facts, I provide three arguments why the headless relative pronoun in Modern German is part of the relative clause. The first one is extraposition in headed relative clauses, the second one is from headless relatives, the last one is \tsc{wh}-elements in general.
 
-The strongest argument for the headless relative pronoun being part of the relative clause comes from extraposition in headless relatives. In Modern German, it is possible to extrapose a clause (a CP), but not a noun phrase (DP). This is illustrated in \ref{ex:mg-extrapose-cp} and \ref{ex:mg-extrapose-dp}.
+The strongest argument for the headless relative pronoun being part of the relative clause comes from extraposition in headless relatives. In Modern German, it is possible to extrapose a clause (a CP), but not a noun phrase (DP). The relative clause including the relative pronoun in a headless relative can be extraposed, which indicates that the relative pronoun is part of the relative clause. In what follows I show that CPs can be extraposed and DPs cannot. Then I illustrate how relative clauses including the relative pronoun in headless relatives pattern with CPs.
 
-The sentence in \ref{ex:mg-extrapose-cp-base} contains a clausal object, marked here in bold. This objects can be extraposed to the right edge of the clause, shown in \ref{ex:mg-extrapose-cp-moved}.
+The sentence in \ref{ex:mg-extrapose-cp} show that it is possible to extrapose CP. In \ref{ex:mg-extrapose-cp-base}, the clausal object \tit{wie es dir geht} `how you are doing', marked here in bold, appears in its base position. This objects can be extraposed to the right edge of the clause, shown in \ref{ex:mg-extrapose-cp-moved}.
 
 \ex.\label{ex:mg-extrapose-cp}
 \ag. Mir ist \tbf{wie} \tbf{es} \tbf{dir} \tbf{geht} egal.\\
@@ -33,7 +36,8 @@ The sentence in \ref{ex:mg-extrapose-cp-base} contains a clausal object, marked 
  1\tsc{sg}.\tsc{dat} is {the same} how it 2\tsc{sg}.\tsc{dat} goes\\
  `I don't care how you are doing.' \flushfill{Modern German}\label{ex:mg-extrapose-cp-moved}
 
-This does not work with the same sentence, only replacing the sentential object by a simple noun phrase. blabla
+\ref{ex:mg-extrapose-dp} illustrates that it is impossible to extrapose a DP. The clausal object of \ref{ex:mg-extrapose-cp} is replaced by a simplex noun phrase \tit{die Sache} `that matter'.
+In \ref{ex:mg-extrapose-dp-base} the object, marked in bold, appears in its base position. In \ref{ex:mg-extrapose-dp-moved} it is extraposed, and the sentence is no longer grammatical.
 
 \ex.\label{ex:mg-extrapose-dp}
 \ag. Mir ist \tbf{die} \tbf{Sache} egal.\\
@@ -43,42 +47,50 @@ This does not work with the same sentence, only replacing the sentential object 
  1\tsc{sg}.\tsc{dat} is {the same} that matter\\
  `I don't care about that matter.' \flushfill{Modern German}\label{ex:mg-extrapose-dp-moved}
 
-Now \ref{ex:extra-headless} shows two examples with headless relative clause extraposition. The relative clause can be extraposed, showing that the relative pronoun is part of a CP. If it was not in the CP, it could not be extraposed.
+So here we see that with an over head.
+
+
+ \ex. \label{ex:extra-headed} adapted from Groos/v Riemsdijk
+ \ag. Jan hat das, \tbf{was} \tbf{er} \tbf{gestohlen} \tbf{hat}, zurückgegeben.\\
+ Jan has the money which he stolen has returned\\
+ \glt `Jan has returned the money that he has stolen.'\label{ex:extra-headed-base}
+ \bg. Jan hat das zurückgegeben, \tbf{was} \tbf{er} \tbf{gestohlen} \tbf{hat}.\\
+ the Hans has the money returned which he stolen has\\
+ \glt `Jan has returned the money that he has stolen.'\label{ex:extra-headed-only-clause}
+ \cg. *Jan hat zurückgegeben, das, \tbf{was} \tbf{er} \tbf{gestohlen} \tbf{hat}.\\
+ Jan has returned the money which he stolen has\\
+ \glt `Jan has returned the money that he has stolen.'\label{ex:extra-headed-head-clause}
+
+Here without the head.
+\ref{ex:mg-extra} shows an example of a headless relative. The relative clause including the relative pronoun, marked in bold, appears in its base position in \ref{ex:mg-extra-no}. In \ref{ex:mg-extra-yes}, it is extraposed.
 
 \ex.\label{ex:mg-extra}
-\ag. Der Hans hat \tbf{was} \tbf{er} \tbf{gestohlen} \tbf{hat} zurückgegeben.\\
+\ag. Jan hat \tbf{was} \tbf{er} \tbf{gestohlen} \tbf{hat} zurückgegeben.\\
 the Hans has what he stolen has returned\\
 `Hans has returned what he has stolen.' \citet[185]{groos1981}\label{ex:mg-extra-no}
-\bg. Der Hans hat zurückgegeben \tbf{was} \tbf{er} \tbf{gestohlen} \tbf{hat}.\\
+\bg. Jan hat zurückgegeben \tbf{was} \tbf{er} \tbf{gestohlen} \tbf{hat}.\\
 the Hans has returned what he stolen has\\
 `Hans has returned what he has stolen.' \citet[185]{groos1981}\label{ex:mg-extra-yes}
 
-The second argument comes from relative pronouns in headed relatives. Even though they are not headless relative pronouns, here you can see too that the head is a DP in the main clause and the relative pronoun is part of the relative clause.
+\ref{ex:mg-extrapose-cp} and \ref{ex:mg-extrapose-dp} have shown that only CPs can be moved in Modern German and DPs cannot. \ref{ex:mg-extra} shows that the relative clause including the relative pronoun can be extraposed, so it is a CP.
+
+The second argument for the relative pronoun in headless relative being part of the relative clause comes from relative pronouns in headed relatives. Even though these here you can see too that the head is a DP in the main clause and the relative pronoun is part of the relative clause.
 
 \ref{ex:extra-headed-base} gives an example of a headed relative clause with the relative clause in base position. \tit{das Geld} `the money' is the head of the relative clause an \tit{das er gestohlen hat} `that he stole' is the relative clause.
 \ref{ex:extra-headed-only-clause} gives an example with the relative clause extraposed, so at the right edge of the clause. The head of the relative clause is left behind. This is grammatical. This means that a relative clause can be extraposed.
 \ref{ex:extra-headed-head-clause} gives an example with the relative caluse extraposed and the head of the relative clause with it. This is ungrammatical in Modern German. This means that the head of the relative clause cannot be extraposed.
 
-\ex. \citet[185]{groos1981}\label{ex:extra-headed}
-\ag. Der Hans hat das Geld, \tbf{das} \tbf{er} \tbf{gestohlen} \tbf{hat}, zurückgegeben.\\
-the Hans has the money which he stolen has returned\\
-\glt `Hans has returned the money that he has stolen.'\label{ex:extra-headed-base}
-\bg. Der Hans hat das Geld zurückgegeben, \tbf{das} \tbf{er} \tbf{gestohlen} \tbf{hat}.\\
-the Hans has the money returned which he stolen has\\
-\glt `Hans has returned the money that he has stolen.'\label{ex:extra-headed-only-clause}
-\cg. *Der Hans hat zurückgegeben, das Geld, \tbf{das} \tbf{er} \tbf{gestohlen} \tbf{hat}.\\
-the Hans has returned the money which he stolen has\\
-\glt `Hans has returned the money that he has stolen.'\label{ex:extra-headed-head-clause}
 
-Last, I consider \tsc{wh}-pronouns in Modern German in general. There are more \tsc{wh}-pronouns, such as \tsc{wh}-interrogatives (but not indefinites), that typically appear at the left edge of the clause, just like in other \tsc{wh}-moving languages. An example with \tit{wen} `who' is given in \ref{ex:german-wh-left}. Non-\tsc{wh}-pronouns do not necessarily appear at the left edge of the clause, just as \tit{ihn} `him' in \ref{ex:german-non-wh-not-left}.
-
-\ex.
-\ag. Wen hast du gestern gesehen?\\
- Who have you yesterday seen\\
- `Who did you see yesterday?'\label{ex:german-wh-left}
-\bg. Ich habe ihn gestern gesehen.\\
- I have him yesterday seen\\
- `I saw him yesterday.'\label{ex:german-non-wh-not-left}
+%
+% Last, I consider \tsc{wh}-pronouns in Modern German in general. There are more \tsc{wh}-pronouns, such as \tsc{wh}-interrogatives (but not indefinites), that typically appear at the left edge of the clause, just like in other \tsc{wh}-moving languages. An example with \tit{wen} `who' is given in \ref{ex:german-wh-left}. Non-\tsc{wh}-pronouns do not necessarily appear at the left edge of the clause, just as \tit{ihn} `him' in \ref{ex:german-non-wh-not-left}.
+%
+% \ex.
+% \ag. Wen hast du gestern gesehen?\\
+%  Who have you yesterday seen\\
+%  `Who did you see yesterday?'\label{ex:german-wh-left}
+% \bg. Ich habe ihn gestern gesehen.\\
+%  I have him yesterday seen\\
+%  `I saw him yesterday.'\label{ex:german-non-wh-not-left}
 
 Conclusion: the \tsc{wh}-pronoun is part of the relative clause in Modern German. It appears at the left edge.
 
