--- a/going-into-detail.tex
+++ b/going-into-detail.tex
@@ -113,9 +113,8 @@ German \tit{das, was} - \tit{an dem}
 
 so d is lacking
 
-which feature is missing there?
+which feature is missing there? Florian Schwarz
 
-Jane?
 
 
 
